Itinerary and rules

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,6 +10,9 @@
   "countdown.minutes": "Minutes",
   "countdown.seconds": "Seconds",
   "map.title": "Location & Nearby Places",
+  "map.tabs.venue": "Main Event",
+  "map.tabs.hotel": "Hotels",
+  "map.tabs.attraction": "Other Locations",
   "map.venue.name": "Las Nubes Eventos",
   "map.venue.address": "Carr Nacional, Los Rodríguez, 67318 Santiago, N.L.",
   "map.hotel.name": "Hotel Boutique Casa Santiago",
