--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -12,7 +12,7 @@
   "map.title": "Ubicación y Lugares Cercanos",
   "map.tabs.venue": "Evento Principal",
   "map.tabs.hotel": "Hoteles",
-  "map.tabs.attraction": "Otros Lugares",
+  "map.tabs.attraction": "¿Qué hacer?",
   "map.venue.name": "Las Nubes Eventos",
   "map.venue.address": "Carr Nacional, Los Rodríguez, 67318 Santiago, N.L.",
   "map.hotel.name": "Hotel Boutique Casa Santiago",
