--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -18,5 +18,65 @@
   "map.hotel.name": "Hotel Boutique Casa Santiago",
   "map.hotel.address": "Calle Principal, Santiago, N.L.",
   "map.attraction.name": "Cola de Caballo Waterfall",
-  "map.attraction.address": "Parque Nacional Cumbres de Monterrey"
+  "map.attraction.address": "Parque Nacional Cumbres de Monterrey",
+  "rsvp.title": "RSVP - Attendance Confirmation",
+  "rsvp.invitation.title": "We invite you to...",
+  "rsvp.invitation.helper": "(Open the envelope)",
+  "rsvp.invitation.toWedding": "Our wedding",
+  "rsvp.loading": "Loading invitation...",
+  "rsvp.error": "Error",
+  "rsvp.backToHome": "Back to Home",
+  "rsvp.invitationNotFound": "Invitation not found",
+  "rsvp.invalidInvitation": "Invalid invitation for this event",
+  "rsvp.errorLoading": "Error loading invitation",
+  "rsvp.errorConfirming": "Error confirming invitation",
+  "rsvp.errorDenying": "Error declining invitation",
+  "rsvp.confirmReceived": "Confirmation Received!",
+  "rsvp.group": "Group",
+  "rsvp.confirmedPeople": "Confirmed people",
+  "rsvp.of": "of",
+  "rsvp.groupGuests": "Group guests:",
+  "rsvp.seeYouThere": "See you on October 25, 2025!",
+  "rsvp.schedule": "Schedule: 6:00 PM - Civil Wedding | 7:00 PM - Religious Ceremony | 8:00 PM - Reception",
+  "rsvp.invitationDenied": "Invitation Declined",
+  "rsvp.sorryCannotAttend": "We're sorry you can't join us on this special day.",
+  "rsvp.hopeSeeYouNext": "We hope to see you on another occasion!",
+  "rsvp.pleaseConfirm": "Please confirm your attendance",
+  "rsvp.invitationFor": "Invitation for up to",
+  "rsvp.person": "person",
+  "rsvp.people": "people",
+  "rsvp.guests": "Guests:",
+  "rsvp.canYouJoin": "Can you join us?",
+  "rsvp.numberOfPeople": "Number of people attending:",
+  "rsvp.minimum": "Minimum",
+  "rsvp.maximum": "maximum",
+  "rsvp.responseSent": "Response Sent!",
+  "rsvp.thankYouConfirm": "Thank you for confirming your attendance. See you at the celebration.",
+  "rsvp.sending": "Sending...",
+  "rsvp.confirm": "Confirm",
+  "rsvp.confirmPeople": "people",
+  "rsvp.cannotAttend": "Cannot attend",
+  "nav.home": "Home",
+  "nav.countdown": "Countdown",
+  "nav.location": "Location",
+  "nav.itinerary": "Itinerary",
+  "nav.dresscode": "Dress Code",
+  "nav.gifts": "Gifts",
+  "nav.rsvp": "RSVP",
+  "calendar.addToCalendar": "Add to Your Calendar",
+  "calendar.dontForgetDate": "Don't forget the date - Save the event to your calendar!",
+  "calendar.downloadICS": "Download .ICS",
+  "calendar.googleCalendar": "Google Calendar",
+  "calendar.outlook": "Outlook",
+  "calendar.yahooCalendar": "Yahoo Calendar",
+  "itinerary.title": "Itinerary",
+  "itinerary.date": "Saturday, October 25, 2025",
+  "itinerary.civilWedding": "Civil Wedding",
+  "itinerary.religiousCeremony": "Religious Ceremony",
+  "itinerary.reception": "Reception",
+  "itinerary.endReception": "End of Reception",
+  "itinerary.time.6pm": "6:00 p.m.",
+  "itinerary.time.7pm": "7:00 p.m.",
+  "itinerary.time.8pm": "8:00 p.m.",
+  "itinerary.time.2am": "2:00 a.m."
 } 
