--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -18,5 +18,65 @@
   "map.hotel.name": "Hotel Boutique Casa Santiago",
   "map.hotel.address": "Calle Principal, Santiago, N.L.",
   "map.attraction.name": "Cascada Cola de Caballo",
-  "map.attraction.address": "Parque Nacional Cumbres de Monterrey"
+  "map.attraction.address": "Parque Nacional Cumbres de Monterrey",
+  "rsvp.title": "RSVP - Confirmación de Asistencia",
+  "rsvp.invitation.title": "Te invitamos a...",
+  "rsvp.invitation.helper": "(Abre el sobre)",
+  "rsvp.invitation.toWedding": "A nuestra boda",
+  "rsvp.loading": "Cargando invitación...",
+  "rsvp.error": "Error",
+  "rsvp.backToHome": "Volver al Inicio",
+  "rsvp.invitationNotFound": "Invitación no encontrada",
+  "rsvp.invalidInvitation": "Invitación no válida para este evento",
+  "rsvp.errorLoading": "Error al cargar la invitación",
+  "rsvp.errorConfirming": "Error al confirmar la invitación",
+  "rsvp.errorDenying": "Error al rechazar la invitación",
+  "rsvp.confirmReceived": "¡Confirmación Recibida!",
+  "rsvp.group": "Grupo",
+  "rsvp.confirmedPeople": "Personas confirmadas",
+  "rsvp.of": "de",
+  "rsvp.groupGuests": "Invitados del grupo:",
+  "rsvp.seeYouThere": "¡Nos vemos el 25 de octubre de 2025!",
+  "rsvp.schedule": "Horario: 6:00 PM - Boda Civil | 7:00 PM - Ceremonia Religiosa | 8:00 PM - Recepción",
+  "rsvp.invitationDenied": "Invitación Rechazada",
+  "rsvp.sorryCannotAttend": "Lamentamos que no puedan acompañarnos en este día tan especial.",
+  "rsvp.hopeSeeYouNext": "¡Esperamos verlos en otra ocasión!",
+  "rsvp.pleaseConfirm": "Por favor confirma tu asistencia",
+  "rsvp.invitationFor": "Invitación para hasta",
+  "rsvp.person": "persona",
+  "rsvp.people": "personas",
+  "rsvp.guests": "Invitados:",
+  "rsvp.canYouJoin": "¿Podrán acompañarnos?",
+  "rsvp.numberOfPeople": "Número de personas que asistirán:",
+  "rsvp.minimum": "Mínimo",
+  "rsvp.maximum": "máximo",
+  "rsvp.responseSent": "¡Respuesta Enviada!",
+  "rsvp.thankYouConfirm": "Gracias por confirmar tu asistencia. Nos vemos en la celebración.",
+  "rsvp.sending": "Enviando...",
+  "rsvp.confirm": "Confirmar",
+  "rsvp.confirmPeople": "personas",
+  "rsvp.cannotAttend": "No podré asistir",
+  "nav.home": "Inicio",
+  "nav.countdown": "Cuenta Regresiva",
+  "nav.location": "Ubicación",
+  "nav.itinerary": "Itinerario",
+  "nav.dresscode": "Código Vestimenta",
+  "nav.gifts": "Regalos",
+  "nav.rsvp": "RSVP",
+  "calendar.addToCalendar": "Agregar a tu Calendario",
+  "calendar.dontForgetDate": "No olvides la fecha - ¡Guarda el evento en tu calendario!",
+  "calendar.downloadICS": "Descargar .ICS",
+  "calendar.googleCalendar": "Google Calendar",
+  "calendar.outlook": "Outlook",
+  "calendar.yahooCalendar": "Yahoo Calendar",
+  "itinerary.title": "Itinerario",
+  "itinerary.date": "Sábado 25 de Octubre, 2025",
+  "itinerary.civilWedding": "Boda Civil",
+  "itinerary.religiousCeremony": "Ceremonia Religiosa",
+  "itinerary.reception": "Recepción",
+  "itinerary.endReception": "Fin de la recepción",
+  "itinerary.time.6pm": "6:00 p.m.",
+  "itinerary.time.7pm": "7:00 p.m.",
+  "itinerary.time.8pm": "8:00 p.m.",
+  "itinerary.time.2am": "2:00 a.m."
 } 
